...
                        <subviews>
                            <view contentMode="scaleToFill" ambiguous="YES" misplaced="YES" translatesAutoresizingMaskIntoConstraints="NO" id="gbQ-oh-gBb">
                                <rect key="frame" x="64" y="219" width="272" height="162"/>
                                <subviews>
                                    <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" ambiguous="YES" misplaced="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Username" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="Dml-Gq-G5C">
                                        <rect key="frame" x="20" y="20" width="232" height="30"/>
                                        <accessibility key="accessibilityConfiguration" identifier="UsernameTextField" label="User name field"/>
                                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                        <textInputTraits key="textInputTraits"/>
                                    </textField>
                                    <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" ambiguous="YES" misplaced="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Password" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="5QD-BQ-dM1">
                                        <rect key="frame" x="20" y="66" width="232" height="30"/>
                                        <accessibility key="accessibilityConfiguration" identifier="PasswordTextField" label="Password field"/>
                                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                        <textInputTraits key="textInputTraits" secureTextEntry="YES"/>
                                    </textField>
                                    <button opaque="NO" contentMode="scaleToFill" ambiguous="YES" misplaced="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="aKi-og-ss3">
                                        <rect key="frame" x="103" y="112" width="56" height="30"/>
                                        <accessibility key="accessibilityConfiguration" identifier="SignInButton" label="Sign in button"/>
                                        <state key="normal" title="Sign In"/>
                                        <connections>
                                            <action selector="onSignInButtonPressed:" destination="BYZ-38-t0r" eventType="touchUpInside" id="aqx-0f-6M4"/>
                                        </connections>
                                    </button>
                                </subviews>
...
                    <view key="view" contentMode="scaleToFill" id="Ac7-yp-L6O">
                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                        <subviews>
                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Signed In Successfully!" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="nIj-hc-F2H">
                                <rect key="frame" x="-42" y="-21" width="42" height="21"/>
                                <accessibility key="accessibilityConfiguration" identifier="SuccessfulSignInText" label="Signed in Successsfully"/>
                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
                                <nil key="highlightedColor"/>
                            </label>
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="fGD-TT-Cax">
                                <rect key="frame" x="-23" y="-15" width="46" height="30"/>
                                <constraints>
                                    <constraint firstAttribute="width" constant="85" id="Fhi-6O-S9l"/>
                                </constraints>
                                <state key="normal" title="Sign out"/>
                                <variation key="default">
                                    <mask key="constraints">
                                        <exclude reference="Fhi-6O-S9l"/>
                                    </mask>
                                </variation>
                                <variation key="widthClass=compact">
...
